--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,50 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+/* Tooltip.css */
+
+.tooltip-container {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltip {
+  position: absolute;
+  padding: 5px;
+  background-color: #333;
+  color: #fff;
+  border-radius: 3px;
+  font-size: 14px;
+  z-index: 1;
+  opacity: 0.9;
+}
+
+.tooltip-top {
+  transform: translateY(-100%);
+  bottom: 110%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 8px;
+}
+
+.tooltip-bottom {
+  top: 110%;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 8px;
+}
+
+.tooltip-left {
+  top: 50%;
+  right: 110%;
+  transform: translateY(-50%);
+  border-radius: 8px;
+}
+
+.tooltip-right {
+  top: 50%;
+  left: 110%;
+  transform: translateY(-50%);
+  border-radius: 8px;
+}
